[gd_scene load_steps=66 format=2]

[ext_resource path="res://font/209_id-kumo400a.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/Skelton_Pirate_002_Walk.glb" type="PackedScene" id=2]
[ext_resource path="res://Node.gd" type="Script" id=3]
[ext_resource path="res://Girl_003_Idle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprite_DG.tscn" type="PackedScene" id=5]
[ext_resource path="res://Girl_002_Walk.tscn" type="PackedScene" id=6]
[ext_resource path="res://asset/Boy_003_Idle.glb" type="PackedScene" id=7]
[ext_resource path="res://Puppy_102_Walk.glb" type="PackedScene" id=8]
[ext_resource path="res://Puppy_103_Idle.glb" type="PackedScene" id=9]
[ext_resource path="res://KinematicBody_Floor.tscn" type="PackedScene" id=10]
[ext_resource path="res://Area_Goal.tscn" type="PackedScene" id=11]
[ext_resource path="res://KinematicBody_Dart.tscn" type="PackedScene" id=12]
[ext_resource path="res://KinematicBody_Wall.tscn" type="PackedScene" id=13]
[ext_resource path="res://asset/Boy_002_Walk.glb" type="PackedScene" id=14]
[ext_resource path="res://KinematicBody_Start.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprite_OR.tscn" type="PackedScene" id=16]
[ext_resource path="res://Sprite_RD.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprite_WT.tscn" type="PackedScene" id=18]
[ext_resource path="res://asset/Skelton_Pirate_003_Idle.glb" type="PackedScene" id=19]
[ext_resource path="res://KinematicBody_Wanderer.gd" type="Script" id=20]
[ext_resource path="res://Node2D_WIN.gd" type="Script" id=21]
[ext_resource path="res://Node_Menu.gd" type="Script" id=22]
[ext_resource path="res://Spatial.gd" type="Script" id=23]
[ext_resource path="res://Button.gd" type="Script" id=24]
[ext_resource path="res://Kinematic_Player.gd" type="Script" id=25]
[ext_resource path="res://MenuButton3.gd" type="Script" id=26]
[ext_resource path="res://WindowDialog.gd" type="Script" id=27]
[ext_resource path="res://JoyStick.gd" type="Script" id=28]
[ext_resource path="res://MenuButton.gd" type="Script" id=29]
[ext_resource path="res://Maze.gd" type="Script" id=30]
[ext_resource path="res://WindowDialog2.gd" type="Script" id=31]
[ext_resource path="res://Maze_03W.png" type="Texture" id=32]
[ext_resource path="res://asset/Balloon_003.png" type="Texture" id=33]
[ext_resource path="res://big_circle_N.png" type="Texture" id=34]
[ext_resource path="res://orange_ball_01.png" type="Texture" id=35]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=14]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=16]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="Skin" id=18]

[sub_resource type="CylinderShape" id=19]
radius = 0.4
height = 1.4

[sub_resource type="CylinderShape" id=20]
radius = 0.4
height = 1.5

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=22]
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 20, 24, 28, 32, 36, 40, 44, 48, 80, 120 ]
}

[sub_resource type="DynamicFont" id=23]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="DynamicFont" id=25]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=26]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=27]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=29]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=30]
size = 32
font_data = ExtResource( 1 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Node_Menu" type="Node" parent="."]
script = ExtResource( 22 )

[node name="Control" type="Control" parent="Node_Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node_Menu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Node_Menu/Control/VBoxContainer"]
margin_right = 710.0
margin_bottom = 299.0
custom_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="Node_Menu/Control/VBoxContainer/HBoxContainer2"]
margin_right = 430.0
margin_bottom = 299.0
texture = ExtResource( 32 )

[node name="Label3" type="Label" parent="Node_Menu/Control/VBoxContainer/HBoxContainer2"]
margin_left = 450.0
margin_top = 40.0
margin_right = 660.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 1 )
text = "迷路
メイロ
Maze"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 329.0
margin_right = 710.0
margin_bottom = 377.0
text = "  

"

[node name="HBoxContainer3" type="HBoxContainer" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 407.0
margin_right = 710.0
margin_bottom = 477.0

[node name="MenuButton3" type="MenuButton" parent="Node_Menu/Control/VBoxContainer/HBoxContainer3"]
margin_right = 460.0
margin_bottom = 70.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.627451, 0, 1 )
text = " Player:      "
align = 0
items = [ "BOY", null, 0, false, false, 0, 0, null, "", false, "GIRL", null, 0, false, false, 1, 0, null, "", false, "PUPPY", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 26 )

[node name="Label" type="Label" parent="Node_Menu/Control/VBoxContainer/HBoxContainer3"]
margin_left = 464.0
margin_top = 3.0
margin_right = 624.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 5 )
text = "BOY  "

[node name="HBoxContainer" type="HBoxContainer" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 507.0
margin_right = 710.0
margin_bottom = 571.0
custom_constants/separation = 10

[node name="Button_00" type="Button" parent="Node_Menu/Control/VBoxContainer/HBoxContainer"]
margin_right = 480.0
margin_bottom = 64.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.627451, 0, 1 )
text = " Sound Effect: "
script = ExtResource( 24 )

[node name="Label" type="Label" parent="Node_Menu/Control/VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 586.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 601.0
margin_right = 710.0
margin_bottom = 739.0
rect_clip_content = true

[node name="MenuButton" type="MenuButton" parent="Node_Menu/Control/VBoxContainer/VBoxContainer"]
margin_right = 710.0
margin_bottom = 70.0
theme = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 0.627451, 0, 1 )
text = "Set the Size of Maze"
items = [ "9 x 11", null, 0, false, false, 0, 0, null, "", false, "11 x 15", null, 0, false, false, 1, 0, null, "", false, "15 x 15", null, 0, false, false, 2, 0, null, "", false, "15 x 21", null, 0, false, false, 3, 0, null, "", false, "21 x 25", null, 0, false, false, 4, 0, null, "", false, "25 x 25", null, 0, false, false, 5, 0, null, "", false, "25 x 31", null, 0, false, false, 6, 0, null, "", false, "31 x 35", null, 0, false, false, 7, 0, null, "", false, "35 x 35", null, 0, false, false, 8, 0, null, "", false, "Random", null, 0, false, false, 9, 0, null, "", false ]
script = ExtResource( 29 )

[node name="Label0" type="Label" parent="Node_Menu/Control/VBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 710.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 12 )
text = "9 x 11"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_01" type="Button" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 769.0
margin_right = 710.0
margin_bottom = 850.0
rect_clip_content = true
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 0.627451, 0, 1 )
text = "New Game"

[node name="Button_02" type="Button" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 880.0
margin_right = 710.0
margin_bottom = 961.0
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 0.392157, 0, 1 )
text = "Quit"

[node name="Label1" type="Label" parent="Node_Menu/Control/VBoxContainer"]
margin_top = 991.0
margin_right = 710.0
margin_bottom = 1228.0
custom_fonts/font = SubResource( 17 )
text = "
2021/04/11

by T. Fujita"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spatial" type="Spatial" parent="Node_Menu"]
script = ExtResource( 23 )

[node name="DirectionalLight" type="DirectionalLight" parent="Node_Menu/Spatial"]
transform = Transform( 0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, 5, 5, 0 )
shadow_enabled = true

[node name="Node_Maze" type="Node" parent="Node_Menu/Spatial"]
script = ExtResource( 30 )

[node name="KinematicBody_Dart" parent="Node_Menu/Spatial" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="KinematicBody_Wall" parent="Node_Menu/Spatial" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="KinematicBody_Floor" parent="Node_Menu/Spatial" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="KinematicBody_Start" parent="Node_Menu/Spatial" instance=ExtResource( 15 )]

[node name="KinematicBody_Player" type="KinematicBody" parent="Node_Menu/Spatial"]
script = ExtResource( 25 )

[node name="Camera" type="Camera" parent="Node_Menu/Spatial/KinematicBody_Player"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 7, 7 )

[node name="MeshInstance" type="MeshInstance" parent="Node_Menu/Spatial/KinematicBody_Player"]
skin = SubResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="Node_Menu/Spatial/KinematicBody_Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 19 )

[node name="Boy_002_Walk" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 14 )]

[node name="Boy_003_Idle" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 7 )]

[node name="Girl_002_Walk" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 6 )]

[node name="Girl_003_Idle" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 4 )]

[node name="Puppy_102_Walk" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 8 )]

[node name="Puppy_103_Idle" parent="Node_Menu/Spatial/KinematicBody_Player" instance=ExtResource( 9 )]

[node name="Area_Goal" parent="Node_Menu/Spatial" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -15, 0 )

[node name="KinematicBody_Wanderer" type="KinematicBody" parent="Node_Menu/Spatial"]
script = ExtResource( 20 )

[node name="RayCast_XP" type="RayCast" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
enabled = true
cast_to = Vector3( 0.5, 0, 0 )

[node name="RayCast_XM" type="RayCast" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
enabled = true
cast_to = Vector3( -0.5, 0, 0 )

[node name="RayCast_ZP" type="RayCast" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
enabled = true
cast_to = Vector3( 0, 0, 0.5 )

[node name="RayCast_ZM" type="RayCast" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
enabled = true
cast_to = Vector3( 0, 0, -0.5 )

[node name="MeshInstance" type="MeshInstance" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]

[node name="CollisionShape" type="CollisionShape" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 20 )

[node name="Skelton_Pirate_002_Walk" parent="Node_Menu/Spatial/KinematicBody_Wanderer" instance=ExtResource( 2 )]

[node name="Skelton_Pirate_003_Idle" parent="Node_Menu/Spatial/KinematicBody_Wanderer" instance=ExtResource( 19 )]

[node name="Sprite3D" type="Sprite3D" parent="Node_Menu/Spatial/KinematicBody_Wanderer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.059, 2.5, 0 )
double_sided = false
texture = ExtResource( 33 )

[node name="Label" type="Label" parent="Node_Menu/Spatial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -60.5
margin_right = 180.0
margin_bottom = 60.5
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 0.392157, 0, 1 )
text = "Goal !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node_Menu/Spatial/Label"]
anims/Goal = SubResource( 22 )

[node name="JoyStick" type="Node2D" parent="Node_Menu/Spatial"]
position = Vector2( 149.997, 1061.67 )
script = ExtResource( 28 )

[node name="BigCircle" type="Sprite" parent="Node_Menu/Spatial/JoyStick"]
texture = ExtResource( 34 )

[node name="SmallCircle" type="Sprite" parent="Node_Menu/Spatial/JoyStick"]
texture = ExtResource( 35 )

[node name="Label_Time" type="Label" parent="Node_Menu/Spatial"]
margin_left = 23.3762
margin_top = 56.4925
margin_right = 407.376
margin_bottom = 120.493
custom_fonts/font = SubResource( 23 )
text = "Time(Sec.): "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_02" type="Button" parent="Node_Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.46
margin_top = 57.3692
margin_right = -31.4604
margin_bottom = 127.369
custom_styles/normal = SubResource( 24 )
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 1, 0.784314, 0, 0.698039 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="Node_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
custom_fonts/title_font = SubResource( 26 )
window_title = "Confirm"
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node_Menu/WindowDialog"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 27 )
text = "Return to Menu.
Are you ready ?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Node_Menu/WindowDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -53.0
margin_right = 200.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YES_Button" type="Button" parent="Node_Menu/WindowDialog/HBoxContainer"]
margin_left = 91.0
margin_right = 208.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 28 )
custom_colors/font_color = Color( 1, 0.784314, 0, 1 )
text = " YES "

[node name="NO_Button" type="Button" parent="Node_Menu/WindowDialog/HBoxContainer"]
margin_left = 212.0
margin_right = 308.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 1, 0.392157, 0, 1 )
text = " NO "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog2" type="WindowDialog" parent="Node_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -210.0
margin_right = 210.0
margin_bottom = 210.0
custom_fonts/title_font = SubResource( 30 )
window_title = "Create a Maze"
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D_WIN" type="Node2D" parent="Node_Menu/WindowDialog2"]
script = ExtResource( 21 )

[node name="Sprite_DG" parent="Node_Menu/WindowDialog2" instance=ExtResource( 5 )]

[node name="Sprite_OR" parent="Node_Menu/WindowDialog2" instance=ExtResource( 16 )]

[node name="Sprite_RD" parent="Node_Menu/WindowDialog2" instance=ExtResource( 17 )]

[node name="Sprite_WT" parent="Node_Menu/WindowDialog2" instance=ExtResource( 18 )]
[connection signal="pressed" from="Node_Menu/Control/VBoxContainer/HBoxContainer/Button_00" to="Node_Menu/Control/VBoxContainer/HBoxContainer/Button_00" method="_on_Button_00_pressed"]
[connection signal="body_entered" from="Node_Menu/Spatial/Area_Goal" to="Node_Menu/Spatial" method="_on_Area_Goal_body_entered"]
[connection signal="pressed" from="Node_Menu/Button_02" to="Node_Menu/WindowDialog" method="_on_Button_02_pressed"]
[connection signal="pressed" from="Node_Menu/WindowDialog/HBoxContainer/YES_Button" to="Node_Menu/WindowDialog" method="_on_YES_Button_pressed"]
[connection signal="pressed" from="Node_Menu/WindowDialog/HBoxContainer/NO_Button" to="Node_Menu/WindowDialog" method="_on_NO_Button_pressed"]
